--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Moon Stone"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "CEO"
+  location         : "218, Gaepo-ro, Gangnam-gu, Seoul, Republic of Korea"
   email            :
   links:
     - label: "Email"
